# avtomatika

./: .gitignore  CODE_CHANGES.md  INTERNALS_DEEP_DIVE.md  LOCAL_TEST_PLAN.md  MAC_TESTING_GUIDE.md  PROJECT_ANALYSIS.md  README.md  WORKER_INTEGRATION_GUIDE.md  pyproject.toml  test_bot.py
avtomatika_bot_cli/: README.md  pyproject.toml
avtomatika_bot_cli/src/avtomatika_bot_cli/: cli.py
avtomatika_worker/: pyproject.toml
bot_runner_worker/: Dockerfile  README.md  pyproject.toml
bot_runner_worker/src/bot_runner_worker/: __init__.py  config.py  container_manager.py  worker.py
docs/: architecture.md  configuration.md
docs/plans/: BOT_RUNNER_USE_CASES.md  DOCKER_BOT_RUNNER_PLAN.md  LOCAL_TEST_PLAN.md  PARSER_SYSTEM_PLAN.md
local_test/: orchestrator_server.py  test_requests.sh  worker_client.py
src/avtomatika/: engine.py  security.py
tests/: conftest.py  storage_test_suite.py  test_engine.py
tests/manual/: README.md
tests/manual/test_01_basic_bot/: README.md
tests/manual/test_02_orchestrator_worker/: README.md
tests/manual/test_03_validation/: README.md
tests/manual/test_04_cli/: README.md
tests/manual/test_05_docker_compose/: README.md
tests/manual/test_06_update_bot/: README.md
tests/manual/test_07_limits/: README.md
tests/manual/test_08_error_logs/: README.md
tests/manual/test_09_git_mode/: README.md
